force-app/main/default/objects/Corporate_Document__c/Corporate_Document__c.object-meta.xml
<CustomObject>
    <description>Corporate Document Objects stores the Uncompleted Documents</description>
    <label>Corporate Document</label>
    <nameField>
        <label>Document</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Document</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>