force-app/main/default/objects/Corporate_Document__c/fields/Document_Stage__c.field-meta.xml
<CustomField>
    <fullName>Document_Stage__c</fullName>
    <description>Stage of Document</description>
    <label>Document Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>