force-app/main/default/objects/Corporate_Document__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LookUp to Document Template to store the template as draft</description>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Corporate Document</relationshipLabel>
    <relationshipName>Corporate_Document</relationshipName>
    <type>Lookup</type>
</CustomField>