force-app/main/default/objects/Corporate_Document__c/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>Indicates that document is related to specified record Id.</description>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>