force-app/main/default/objects/Corporate_Document__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version of the Document</description>
    <label>Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>